apply some changes

--- a/data/construction.tex
+++ b/data/construction.tex
@@ -38,7 +38,7 @@ The new construction from this research named HXT eliminates KPRP leakage in sta
 To remove the KPRP leakage of OXT, a main idea of our protocol HXT is the use of HVE to implement a type of \emph{ciphertext policy} searchable encryption supporting subset membership predicates. Our ciphertext policy protocol is a kind of `dual' to the HVE-based \emph{key policy} searchable encryption protocol for subset membership predicates presented in \cite{boneh2007conjunctive}. In our HVE-based scheme, a dataset owner can encrypt a set $S \subseteq T=\{1,\ldots,n\}$, for some positive integer $n$, into a ciphertext $c_S$, which specifies a `policy'. Using a master secret key $msk$, the owner can generate a search token $tk_{S'}$ for any subset $S' = \{s'_1,\ldots,s'_\ell\}$ of $T$. Using the token $tk_{S'}$ for $S'$ and the ciphertext $c_S$ for $S$, anyone can efficiently check whether $S' \subseteq S$ or not, without leaking any partial information if $S' \not\subseteq S$, e.g. whether any particular element $s'_i$ of $S'$ is in $S$ or not (note that in the scheme of \cite{boneh2007conjunctive}, the set $S$ is used to generate the token, while the set $S'$ is encrypted in the ciphertext). 
 Given this subset membership searchable encryption protocol, a natural idea to apply it to eliminate KPRP leakage in OXT would be to use it to \emph{encrypt the `$\mathbf{XSet}$'} during set up: we let $S \subseteq T$ denote the $\mathbf{XSet}$ list of hashed pairs $h(ind, \mathbf{id_v})$, over all node identifiers $\mathbf{id_v}$ and indexes $ind$ contained in $\mathbf{id_v}$, and we encrypt $S$ into a ciphertext $c_S$ stored on the server using our HVE-based subset searchable encryption scheme. In the search phase with query $ind_1 \wedge \cdots \wedge ind_n$, the client issues the server a HVE search token $tk_{S'}$ for $S' = \{h(ind_i, \mathbf{id_v})\}_{i=2}^n$, $\mathbf{id_v} \in \mathbf{DB}(ind_1)$. This allows the client to check whether $S'\subseteq S$, i.e., whether $\mathbf{id_v}$ contains all $n$ indexes $\{w_i\}_{1\leq i\leq n}$, without revealing the KPRP information on whether $\mathbf{id_v}$ contains any particular pair $(w_1,w_i)$.
 
-There are two main issues with the above basic idea: the first one is the storage overhead. HXT introduces a small (but negligible) false positive probability $P_e$ to use the classical notion of a Bloom filter \cite{bloom1970space} reduce the storage size of $\mathbf{XSet}$ to $m \approx 2\log_2(1/P_e)N$, $m$ is the number of bits in Bloom Filter, and $N$ is number of items in the filter. Another is the performance of HVE, because most of the construction of HVE has exponentiation and pairings during instantiation, which are not efficient when $msk$ built over billions attributes (it happened in Bloom Filter). we proposed a new symmetric HVE without pairings to address this issue.
+There are two main issues with the above basic idea: the first one is the storage overhead. HXT introduces a small (but negligible) false positive probability $P_e$ to use the classical notion of a Bloom filter \cite{bloom1970space} reduce the storage size of $\mathbf{XSet}$ to $m \approx 2\log_2(1/P_e)N$, $m$ is the number of bits in Bloom Filter, and $N$ is number of items in the filter. Another is the performance of HVE, because most of the construction of HVE has exponentiation and pairings during instantiation, which are not efficient when $msk$ are built over billions possible attributes (it happened in Bloom Filter). we proposed a new symmetric HVE without pairings to address this issue.
 
 \section{Future Works}
 In this chapter, a general model for social graph and the searchable encryption notation for the proposed model are established. Based on the model, some existing definitions and tools from SSE can be adapted to support the secure index on graph encryption. By applying these definitions and tools, this research designed a secure and efficient boolean query protocol for graph encryption. Aside from above works, this research will focus on more complex search functions that support ``apply'' and ``extract'' queries, which are important components for Graph Search service in future.
