--- a/data/contribution.tex
+++ b/data/contribution.tex
@@ -2,4 +2,4 @@
 This research focuses on the research questions about the privacy issues on Graph Search and solve it by designing a cryptography based privacy preserving scheme for Graph Search with rich search functions. 
 To facilitate cryptography under the searchable requirement of Graph Search, a new model will be designed to enable efficient search over cryptographic protected graph. Several search functions will be adapted on the basis of the model to extend the search ability on encrypted graph. 
 A formal security analysis will be given to verify the security performance of this new model. This analysis plays an important role to justify that users' privacy in graph can be protected under this model and the search functions which are based on it. 
-Once the new model is fully defined, it will be implemented as a privacy preserving scheme and deployed on large scale graph for evaluation in different query use-case. The evaluation serves as a efficiency test by showing the overhead from cryptography is affordable, additionally, it also shows the practicality of the scheme as it supports rich search functions.
+Once the new model is fully defined, it will be implemented as several privacy preserving schemes and deployed on large scale graph for evaluation in different query use-case. The evaluation serves as a efficiency test by showing the overhead from cryptography is affordable, additionally, it also shows the practicality of the scheme as it supports rich search functions.
