--- a/data/literature.tex
+++ b/data/literature.tex
@@ -3,7 +3,7 @@
 \section{Privacy Preserving Scheme for OSN}
 Numerous works have proposed to preserve the sensitive data privacy in OSN, and two strategies are mainly applied in these works: Data Decentralisation and Cryptography.
 
-\subsection{Data Decentralisation}
+\subsection{Decentralisation-based Solutions}
 Decentralised solutions attempt to provide social services through a collection of independent nodes and users can control their data in a flexible way:
 
 {\bf Decentralised OSN in Peer-to-Peer overlays:} PeerSoN \cite{buchegger2009peerson} and Safebook \cite{cutillo2009safebook} build a decentralised social network in Peer-to-Peer (P2P) overlays. Users can store their data in their local device and on the devices of their trusted friends, they consist of two parts: a distributed hash table (DHT) is used provide lookup service to find users and the data they store; and the P2P network offers direct data exchange between users' devices. In these social network, users are granted full privilege to control their data as well as the communication channel over P2P network: they can choose to either establish communication via their real-life trust \cite{cutillo2009safebook}, or the encrypted channel \cite{buchegger2009peerson}.
@@ -11,9 +11,11 @@ Decentralised solutions attempt to provide social services through a collection 
 {\bf Decentralised OSN in outsourced storage:} Diaspora \cite{diaspora2017diaspora} and Confidant \cite{liu2011confidant} create the decentralised social network by decoupling users's data with the SNS. Users are asked for keeping their data in some trusted server, and then, the scheme can generate some data descriptors and use them to request the SNS from existing OSN. Others can read and retrieve the data from trusted server via a valid descriptor and an appropriate access privilege. 
 In comparison, Persona \cite{baden2009persona} allows its user keeping their data in untrusted server by using cryptographic techniques, and Cachet \cite{nilizadeh2012cachet} uses the idea from P2P network to further address the performance issue in decentralised system by introducing social cache over DHT.
 
-However, decentralised solutions without cryptography are considered as insufficient approaches for solving the privacy issue of OSN. The reason for it is because of the main purpose of these decentralised solutions is to provide access control by users' preference, and this functionality is overlap with OSN access control settings \cite{narayanan2012critical}. In addition, existing OSN service providers have ability to enforce the access control policy in a better way: For example, it is easier for a centralised OSN service provider to stop crawlers and makes their users' data invisible to search engines. Also, some OSN give ``nudge''  when users intent to reveal their sensitive data \cite{mori2010nudge}, but a decentralised system may not work properly in above cases, because its implementation only needs to fit the protocol but does not consider such details.
+However, decentralised solutions without cryptography are considered as insufficient approaches for solving the privacy issue of OSN. The reason for it is because of the main purpose of these decentralised solutions is to provide access control by users' preference, and this functionality is overlap with OSN access control settings \cite{narayanan2012critical}. In addition, existing OSN service providers have ability to enforce the access control policy in a better way: For example, it is easier for a centralised OSN service provider to stop crawlers and makes their users' data invisible to search engines, when users set the access policy to ``private''. Also, some OSN give ``nudge''  when users intent to reveal their sensitive data \cite{mori2010nudge}, but a decentralised system may not work properly in above cases, because its implementation only needs to fit the protocol but does not consider such details.
 
-\subsection{Cryptography}
+In addition, We argue that Graph Search can not be deployed in decentralised system as the relations in decentralised system are distributed in different network, the quality of Graph Search service is impaired as all searches, in this case, needs to be processed by all independent nodes and client undertakes heavily aggregation after the results return to client from multiple nodes.
+
+\subsection{Cryptographic Based Solutions}
 Cryptographic solutions protect the sensitive data via encryption, these solutions are preferred in public social network because it achieve access control by making data unreadable instead of enforcing some protocols, which is considered as more reliable way to stop unauthorised access.
 
 {\bf Index Obfuscation:} NOYB \cite{guha2008noyb} stores users' data with untrusted service providers, but the index of these data is obfuscated by cryptographic technique. In this system, authorised users possess a part of secret can recover the real index and personal information associated with specific users while unauthorised users only get a mixture of arbitrary personal data from the crowd. NOYB is able to protect the privacy of user profile but it doesn't work for user relations and interactions. 
@@ -34,7 +36,7 @@ However, this procedure infers the dilemma when we want to integrate OSN service
 \section{Graph Search}
 Graph Search \cite{facebook2013graph} is a typical OSN service to enrich the users' experience of using OSN. Nonetheless, it significantly improves users' search ability over user-generated data in OSN. To reach this goal, Facebook conducted a research about the social graph based on the large amount of the users' data they possessed, and they concluded that although there are billions of nodes representing the entities (e.g. users and user-generated contents like photos, pages) in social graph, the graph is very sparse because a typical node only have less than a thousand edges describing relations (e.g. friends, likes, tags) between nodes. Intuitively, it is better to represent the graph as a set of adjacency lists of users' id, and an index it by edges \cite{curtiss2013unicorn}. Hence, Graph Search service is built upon the backend index service for edges, and achieve a very low query delay (11 ms in average for finishing a query with 6 million results) for querying the entities such as friends, places, pages, etc.. Furthermore, Graph Search allows more complex queries such as graph traversal to find entities which are more than one edge away from source and it only takes 2000 ms at most for a 100 thousand results query. 
 
-Graph Search highly depends on users' data especially their relations to build its index system. It is obvious that it can not be deployed in decentralised system as the relations are distributed in different network. Prior cryptographic solutions also have met the same dilemma that the system can not build index to support Graph Search with encrypted data. 
+Graph Search highly depends on users' data especially their relations to build its index system. Prior cryptographic solutions also have met the same dilemma that the system can not build index to support Graph Search with encrypted data. 
 
 \section{Searchable Encryption}
 Graph Search makes use of users' sensitive data storing on their server to generate its indexes, Searchable Encryption (SE) enables the ability to search over encrypted data, so it can offer a potential better solution for privacy issue when users' sensitive data are used for searching in outsourced cloud.
@@ -54,16 +56,13 @@ Chase and Kamara \cite{chase2010structured} extended their definition to more ge
 
 Oblivious RAM (ORAM) allows SSE with no leakage \cite{goldreich1996software}. However, it requires communication rounds and search complexity poly-logarithmic in the database size.To balance the efficiency and security of SSE, almost all of the practical schemes leak information about documents based on current security definition.
 
+The notion of Graph Encryption was introduced in \cite{chase2010structured} as a special case of structured encryption. But not like SSE which is also a sub-category of structured encryption search, the researches about Searchable Graph Encryption are very limited.
+In \cite{chase2010structured}, several constructions were proposed to answer Adjacency Queries (give two nodes, do they have a common edge?), Neighbour Queries (get all nodes will a common edge) and Labeled Graph Queries (search graph with some labels in nodes) in encrypted graph. It is obvious that above search functions can not enable the rich functionality on Graph Encryption, and then not suit for Graph Search service.
+
 \subsection{Public Key Searchable Encryption}
 SE protocols have also been studied extensively in the public key setting. Such protocols allow any user with the public key to insert data but only allow the user with the private key to search. The use of public key cryptography makes the protocols less efficient than SSE, but allows more powerful functionality and/or better security properties. 
 The first such protocol was proposed by \cite{boneh2004public} as a generalisation of anonymous Identity-Based Encryption (IBE), and supporting equality queries. It was significantly further generalised in \cite{boneh2007conjunctive} to HVE, applied to conjunctive, subset and range searchable encryption queries. 
-However, public key setting is not suit for Graph Search, because the graph is generated by a sole information source (OSN provider), and the source is untrusted, it is meaningless to let an untrusted party to do encryption.
-
-\subsection{Searchable Encryption on Graph}
-The notion of Graph Encryption was introduced in \cite{chase2010structured} as a special case of structured encryption. But not like SSE which is also a sub-category of structured encryption search, the researches about Searchable Graph Encryption are very limited.
-In \cite{chase2010structured}, several constructions were proposed to answer Adjacency Queries (give two nodes, do they have a common edge?), Neighbour Queries (get all nodes will a common edge) and Labeled Graph Queries (search graph with some labels in nodes) in encrypted graph.
-
-Meng et al. \cite{meng2015grecs} proposed graph encryption schemes that support shortest distance query on graph encryption. Their construction is based on distance oracle instead of Dijkstra's algorithm so their algorithm can only get an approximation of shortest distance but enabling them to search efficiently on a large-scale graph.
+However, public key setting is not suit for Graph Search, because the graph is generated by a sole information source (OSN provider), and the source is untrusted, it is meaningless to let an untrusted party to do encryption and broadcast the data.
 
 \section{Field of Research}
 As a conclusion of literature review, The privacy issue in OSN and its solutions are studied for many years, but none of them fit the context of Graph Search due to its searchable requirement. Since the lack of work about Searchable Encryption on Graph, this research will try to apply the concept of Searchable Encryption to define a Searchable Graph Encryption model. The new privacy preserving scheme for Graph Search will be designed on the basis of above model, and its performance of security will be further investigated as well as the efficient on large scale graph in distributed environment.
