--- a/data/methodology.tex
+++ b/data/methodology.tex
@@ -1,5 +1,5 @@
 \chapter{Objectives and Methodology}
-As mentioned in the literature review, this research plans to contribute in the field of Searchable Graph Encryption by proposing new  Graph Encryption model with rich search functions, and protect OSN users' privacy in Graph Search by using the above model. The detailed objectives and the methodologies are summarised as follows:
+As mentioned in the literature review, this research plans to contribute in the field of Searchable Graph Encryption by proposing new Graph Encryption model with rich search functions, and protect OSN users' privacy in Graph Search by using the above model. The detailed objectives and the methodologies are summarised as follows:
 \begin{enumerate}
 \setlength{\itemsep}{0pt}
 \item {\bf Searchable Graph Encryption Model:}
@@ -19,7 +19,7 @@ As mentioned in the literature review, this research plans to contribute in the 
 \item{\bf Deployment on Large Scale Graph}
 \begin{itemize}
 \setlength{\itemsep}{0pt}
-\item Implement the model as a privacy preserving scheme
+\item Implement the search functions as privacy preserving schemes
 \item Deploy scheme into large scale graph to simulate Graph Search
 \item Evaluate the efficiency and usability of simulated Graph Search via our scheme
 \end{itemize}
